[Porta] add start file app.js, instead of server.js implement upload API change in view

--- a/portal/public/css/styles.css
+++ b/portal/public/css/styles.css
@@ -14,6 +14,11 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
+h4 {
+    margin-top: 15px;
+    color: #68757E;
+}
+
 .row {
     margin-top: 80px;
 }
