--- a/portal/views/index.html
+++ b/portal/views/index.html
@@ -20,6 +20,7 @@
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <span class="glyphicon glyphicon-cloud-upload"></span>
+                        <h4>Upload your file to start scanning</h4>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar"></div>
                         </div>
